# openenv-project

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  ui.html
server/: app.py  environment.py
